--- a/Back-End/japanHatsu_project/requirements.txt
+++ b/Back-End/japanHatsu_project/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.12.0
 asgiref==3.11.0
 certifi==2025.11.12
+charset-normalizer==3.4.4
 distro==1.9.0
 Django==6.0
 django-cors-headers==4.9.0
@@ -18,8 +19,10 @@ psycopg-binary==3.3.2
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dotenv==1.2.1
+requests==2.32.5
 sniffio==1.3.1
 sqlparse==0.5.4
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+urllib3==2.6.2
